# GEGM_Upscaler

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml  docker.yml  e2e.yml  frontend.yml  helm-lint.yml  release-tauri.yml  runpod-worker.yml
.helm/: .helmignore  Chart.yaml  values-staging.yaml  values.yaml
.helm/templates/: NOTES.txt  _helpers.tpl  api-hpa.yaml  api-service.yaml  backendtrafficpolicy.yaml  beat-deployment.yaml  celery-exporter-deployment.yaml  celery-exporter-service.yaml  configmap.yaml  database.yaml  externalsecret.yaml  httproute.yaml  migrate-job.yaml  prometheusrule.yaml  worker-deployment.yaml  worker-pdb.yaml  worker-service.yaml
backend/: Dockerfile
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260408_1458_f772387260f6_tables_users_et_jobs.py  20260421_1514_f74975c08dfb_add_index_on_jobs_created_at.py  20260421_1728_a3170125848e_add_prefer_local_column_to_jobs.py  20260422_1613_2d16d2b3d56d_add_gpu_run_id_to_jobs.py  20260423_1501_d6f155f06bc1_add_audit_log_table_users_deleted_at.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  audit.py  celery.py  config.py  database.py  dependencies.py  logging.py  media.py  metrics.py  redis.py  telemetry.py
backend/app/core/auth/: __init__.py  interface.py  oidc.py  static_token.py
backend/app/core/gpu/: __init__.py  factory.py  interface.py  local_coreml.py  runpod.py
backend/app/core/secrets/: __init__.py  env.py  infisical.py  interface.py  vault.py
backend/app/core/storage/: __init__.py  interface.py  local.py  s3.py
backend/app/jobs/: __init__.py  cleanup.py  models.py  progress.py  progress_sync.py  reaper.py  router.py  schemas.py  service.py  sse.py  tasks.py
backend/app/uploads/: __init__.py  router.py  schemas.py  service.py
backend/app/upscaling/: __init__.py  pipeline.py  preprocessing.py  router_gpu.py  tiling.py
backend/app/users/: __init__.py  deletion.py  models.py  router.py  schemas.py  service.py
backend/tests/: __init__.py  conftest.py  test_cleanup.py  test_deletion.py  test_download.py  test_gpu_runpod.py  test_jobs.py  test_new_backends.py  test_pipeline.py  test_pipeline_chain.py  test_reaper.py  test_router_gpu.py  test_sse.py  test_storage.py  test_uploads.py  test_upscaling.py  test_users.py
charts/gegm-upscaler/: Chart.yaml  values.yaml
charts/gegm-upscaler/templates/: api-deployment.yaml  celery-exporter-servicemonitor.yaml  configmap.yaml  httproute.yaml  prometheusrule.yaml  serviceaccount.yaml  servicemonitor.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: fixtures.ts  gallery.spec.ts  smoke.spec.ts  upscale-flow.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.key.pub
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
frontend/src/components/: BatchPanel.test.tsx  BatchPanel.tsx  CapabilityBadge.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CompareSlider.test.tsx  CompareSlider.tsx  ConfirmProvider.tsx  DropZone.test.tsx  DropZone.tsx  Gallery.test.tsx  Gallery.tsx  JobCard.test.tsx  JobCard.tsx  LanguageSwitcher.tsx  LiveJobCard.tsx  SelectionBar.tsx  SentryFallback.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  ZoomViewer.test.tsx  ZoomViewer.tsx
frontend/src/hooks/: useAuth.ts  useConfirm.ts  useGlobalShortcuts.test.ts  useGlobalShortcuts.ts  useJobNotifications.test.ts  useJobNotifications.ts  usePreferences.test.ts  usePreferences.ts  useSSE.test.ts  useSSE.ts  useSystemResources.ts  useTauriDragDrop.test.ts  useTauriDragDrop.ts  useUpdater.test.ts  useUpdater.ts  useUpload.test.ts  useUpload.ts
frontend/src/i18n/: en.json  fr.json
frontend/src/lib/: api.test.ts  api.ts  auth.ts  capability.ts  constants.ts  i18n.ts  sentry.ts  tauri.ts  utils.test.ts
frontend/src/pages/: AuthCallbackPage.tsx  BatchPage.test.tsx  BatchPage.tsx  GalleryPage.test.tsx  GalleryPage.tsx  HistoryPage.test.tsx  HistoryPage.tsx  LoginPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  UpscalePage.test.tsx  UpscalePage.tsx
frontend/src/stores/: useAuthStore.ts  useJobStore.test.ts  useJobStore.ts  useUpdaterStore.test.ts  useUpdaterStore.ts
frontend/src/test/: setup.ts
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/: dashboards.yml  datasources.yml
monitoring/grafana/dashboards/: api.json  celery.json  system.json
monitoring/loki/: loki.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/promtail/: promtail.yml
runpod-worker/: Dockerfile  handler.py  requirements.txt
runpod-worker/basicsr_shim/basicsr/: __init__.py
runpod-worker/basicsr_shim/basicsr/archs/: arch_util.py
runpod-worker/basicsr_shim/basicsr/utils/: __init__.py  registry.py
runpod-worker/scripts/: download_weights.sh
scripts/: build_banner.py  convert_coreml.sh  convert_to_coreml.py
