[project]
name = "gegm-upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "celery[redis]>=5.6.3",
    "fastapi>=0.135.3",
    "flower>=2.0.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-celery>=0.51b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0",
    "opentelemetry-instrumentation-redis>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
    "pillow>=12.2.0",
    "prometheus-client>=0.22.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "redis>=6.4.0",
    "sentry-sdk[fastapi]>=2.57.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
# Groupe optionnel pour réactiver le mode local Core ML (v2). Non installé
# par défaut en v1 (cloud exclusif). `uv sync --group coreml` pour l'activer.
# torch est volumineux (~2 Go) — on ne l'installe que quand nécessaire.
# coremltools 9.0 est officiellement testé avec torch 2.7 ; les versions
# 2.8+ déclenchent un bug dans `_cast` lors de la conversion de DRCT/HAT.
coreml = [
    "coremltools>=9.0",
    "torch>=2.5,<2.8",
    "timm>=1.0",
    "einops>=0.8",
]

# ══════════════════════════════════════════════════════════════
# Ruff — Linter + Formatter
# ══════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "backend/alembic/versions", "frontend", "__pycache__"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "ASYNC", "S", "T20", "RUF",
]
ignore = ["S101", "S106", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ══════════════════════════════════════════════════════════════
# Pytest
# ══════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ══════════════════════════════════════════════════════════════
# MyPy
# ══════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Les décorateurs Celery (``@celery_app.task``, ``@signal.connect``) n'ont pas
# de stubs officiels : mypy strict les considère comme "untyped" et propage le
# warning sur chaque fonction décorée. On désactive globalement cet avertissement
# car il est noise dans une codebase qui s'appuie naturellement sur Celery.
disable_error_code = ["untyped-decorator"]
