[package]
name = "gegm-upscaler"
version = "0.1.0"
description = "GEGM Upscaler — outil interne d'upscaling d'images par IA"
authors = ["GEGM"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "gegm_upscaler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Détection des ressources système (RAM, CPU load, swap, processus actifs)
# pour le routage adaptatif local/cloud (cf. commands::get_system_resources).
sysinfo = { version = "0.32", default-features = false, features = ["system", "multithread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
